# multitasking-agent

./: .gitignore  README.md  agent.py  cli.py  pyproject.toml  requirements.txt
multitasking_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: cli.py  main.py
src/coding_agent/: crew.py
src/coding_agent/tools/: shell_command.py
src/coding_agents/: crew.py
src/coding_agents/config/: agents.yaml  tasks.yaml
src/coding_agents/tools/: git.py  shell_command.py
src/crews/: main.py
src/crews/engineers/: crew.py
src/crews/engineers/config/: agents.yaml  tasks.yaml
src/crews/in/: crew.py
src/crews/in/config/: agents.yaml  tasks.yaml
src/crews/input_handler/: crew.py
src/crews/input_handler/config/: agents.yaml  tasks.yaml
src/crews/output_handler/: crew.py
src/crews/output_handler/config/: agents.yaml  tasks.yaml
src/multitasking_agent/: cli.py  main.py
src/multitasking_agent/crews/engineers/: crew.py
src/multitasking_agent/crews/engineers/config/: agents.yaml  tasks.yaml
src/multitasking_agent/crews/input_handler/: crew.py
src/multitasking_agent/crews/input_handler/config/: tasks.yaml
src/multitasking_agent/crews/output_handler/: crew.py
src/tools/: git.py  manage_git.py  system_tools.py
